# omnivox

./: .gitignore  .sim_id  CHANGELOG.md  Cargo.toml  OmniVox-Platform.md  README.md  README_BIGPICTURE.md  Untitled-1  curl-ref.yaml  output.json  sim
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: worlds.rs
backend/src/chronovox/: event.rs  persist.rs
backend/src/droidid/: README.md
backend/src/geospec/: README.md  inference.rs  mod.rs  traits.rs
backend/src/matcat/: categories.rs  category_ranges.rs  mod.rs  variants.rs
backend/tests/: persist.rs
data/auth/: dev_user.json
data/worlds/: earth.json  moon.json  sun.json
dev/: out_day.json  out_month.json  out_raw.json  out_week.json  output.json  scratch_output.json
docs/: ARCHITECTURE.md  Arch_Concept.md  MATH.groovy  Naming.md  Solar.md  Time.md  Untitled-1  framelocationpsition  math = rules  stuff.md
frontend/: Cargo.toml  package-lock.json  package.json
frontend/src/: main.rs
frontend/src/app/: mod.rs
frontend/src/app/components/: mod.rs  navbar.rs
frontend/src/app/pages/: home.rs  login.rs  not_found.rs
frontend/src/styles/: index.css
shared/: Cargo.toml
shared/src/: lib.rs
src/: error.rs  lib.rs  main.rs  sim.rs
src/api/: README.md  address.rs  entities.rs  events.rs  mod.rs  objex.rs  properties.rs  session.rs  simulations.rs  users.rs  worlds.rs
src/app/: bootstrap.rs
src/chronovox/: README.md  error.rs  event.rs  mod.rs  persist.rs  timeline.rs
src/core/: mod.rs
src/dev/: scratch.rs
src/droidid/: README.md
src/engine/: error.rs  mod.rs  property_engine.rs
src/geospec/: shapes.rs
src/infra/: mod.rs
src/matcat/: README.md  api.rs  categories.rs  category_ranges.rs  grades.rs  materials.rs  mod.rs  variants.rs
src/objex/: README.md  builder.rs  mod.rs  persist.rs
src/physox/: dynamics.rs  interaction.rs
src/shared/: app_state.rs  auth_context.rs  auth_middleware.rs  mod.rs  viewer_state.rs
src/sim/: README.md  address.rs  clock.rs  environment.rs  error.rs  geolocation.rs  load.rs  mod.rs  persist.rs  runtime.rs  simulation.rs  world.rs
src/supabasic/: # List.sh  README.md  addresses.rs  client.rs  entity.rs  error.rs  events.rs  geolocations.rs  mod.rs  objex.rs  orm.rs  properties.rs  sim_states.rs  simulations.rs  users.rs  worlds.rs
src/tdt/: README.md  core.rs  mod.rs  sim_date.rs  sim_duration.rs  sim_time.rs
src/tests/: entity_mass.rs  entity_weight.rs  environment_at_surface.rs  equatorial_observer.rs  exposure_surface_area.rs  falling_entity.rs  mod.rs  solar_arc.rs  spatial_consistency.rs  thermal_equilibrium.rs
src/uvoxid/: core.rs  geocode.rs  mod.rs  units.rs
src/uvoxxyz/: quat.rs
tests/: integration.rs  matcat_tests.rs  persist.rs  tick.rs  uvoxid.rs
zzold_tests/: barometric.rs  cosmic.rs  environment.rs  gravity.rs  gravity_entity.rs  simulation.rs  surface_point.rs  worlds.rs
(+767 files in other folders)
