[package]
name = "omnivox"
version = "0.1.0"
edition = "2024"


authors = ["Dr. Ippy <jdplumbingsoflo@gmail.com>"]
license = "MIT"
repository = "https://github.com/JDPlumbing/omnivox"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.42"
thiserror = "2.0.16"
dotenvy = "0.15.7"
anyhow = "1.0.100"

