[package]
name = "omnivox-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["web"] }
dioxus-web = "0.7.0-rc.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }

# You can import backend types directly if you want shared DTOs

omnivox-shared = { path = "../shared" }
