[package]
name = "omnivox-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.7.0-rc.0"
dioxus-web = "0.7.0-rc.0"
dioxus-router = "0.7.0-rc.0"


reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }

omnivox-shared = { path = "../shared" }


[features]
default = ["web"]   # ✅ no desktop
web = ["dioxus/web"]